--- a/TP2.ipynb
+++ b/TP2.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "id": "YV_WbRyNh-IT"
       },
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "_NsFXbD1h-IU"
       },
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "v6WxUcpPh-IV"
       },
@@ -220,10 +220,10 @@
         "    Initializes the distribution function, volume density and velocity.\n",
         "    \"\"\"\n",
         "    # Initialisation du domaine\n",
-        "    rho = np.ones((nx,ny))\n",
-        "    geq = np.zeros((9,nx,ny))\n",
-        "    ux = np.zeros((nx,ny))\n",
-        "    uy = np.zeros((nx,ny))\n",
+        "    rho = np.ones((ny,nx))\n",
+        "    geq = np.zeros((9,ny,nx))\n",
+        "    ux = np.zeros((ny,nx))\n",
+        "    uy = np.zeros((ny,nx))\n",
         "\n",
         "    U0 = M0*c0 #U0 adimensionné -------------------------------\n",
         "    nu = U0*nx/Re #Viscosity\n",
@@ -255,7 +255,7 @@
       "metadata": {
         "id": "hlpMYHsUbNWb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "CRHsz2aPh-IW"
       },
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "metadata": {
         "id": "m9pabfafh-IX"
       },
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "4mveWqUh4sd8"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -398,7 +398,7 @@
       "metadata": {
         "id": "0yw0cJhym6dL"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
         "id": "jgGsNoFy7_Za",
         "outputId": "284e6628-376f-492e-dce2-8411d45f82a4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "afQrWFWJh-IY"
       },
@@ -584,7 +584,7 @@
       "metadata": {
         "id": "XBfT9PO5v0Kj"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "r3FD0WV_h-IY"
       },
@@ -640,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -776,7 +776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "wcWQ8Gpth-Ib"
       },
@@ -796,7 +796,7 @@
       "metadata": {
         "id": "fAROBjBJUpzB"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
